[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/player_right_crossbow.png" type="Texture" id=1]
[ext_resource path="res://sound/boom2.wav" type="AudioStream" id=2]
[ext_resource path="res://player.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 0.5, 60 )

[node name="player" type="KinematicBody2D"]
position = Vector2( 32, 24 )
script = ExtResource( 3 )

[node name="PlayerSprite" type="Sprite" parent="."]
position = Vector2( 4, -4 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, -4 )
shape = SubResource( 5 )

[node name="aim_right" type="Position2D" parent="."]
position = Vector2( 12, -4 )

[node name="aim_left" type="Position2D" parent="."]
position = Vector2( -4, -4 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )

[node name="enemy_turner" type="Area2D" parent="."]

[node name="enemy_turner_collision" type="CollisionShape2D" parent="enemy_turner"]
position = Vector2( 3.5, 1 )
shape = SubResource( 6 )

[connection signal="body_entered" from="enemy_turner" to="." method="_on_enemy_turner_body_entered"]
